--- a/MainModels/efpt.config.json
+++ b/MainModels/efpt.config.json
@@ -87,6 +87,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[INV].[Brands]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[INV].[Categories]",
          "ObjectType": 0
       },
@@ -119,7 +123,7 @@
          "ObjectType": 0
       },
       {
-         "Name": "[INV].[SubCategoryId]",
+         "Name": "[INV].[SubCategory]",
          "ObjectType": 0
       },
       {
@@ -212,6 +216,7 @@
    "UseHandleBars": false,
    "UseHierarchyId": false,
    "UseInflector": true,
+   "UseInternalAccessModifiersForSprocsAndFunctions": false,
    "UseLegacyPluralizer": false,
    "UseManyToManyEntity": false,
    "UseNoDefaultConstructor": false,
