--- a/MainModels/efpt.config.json
+++ b/MainModels/efpt.config.json
@@ -107,6 +107,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[INV].[ProductBranches]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[INV].[ProductImages]",
          "ObjectType": 0
       },
