--- a/MainModels/efpt.config.json
+++ b/MainModels/efpt.config.json
@@ -83,6 +83,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[HRM].[SupplierContact]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[HRM].[UserAssignedBranches]",
          "ObjectType": 0
       },
