More changes on Things

--- a/MainModels/efpt.config.json
+++ b/MainModels/efpt.config.json
@@ -163,6 +163,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[SYSTEM].[Notifications]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[SYSTEM].[Roles]",
          "ObjectType": 0
       },
