--- a/MainModels/efpt.config.json
+++ b/MainModels/efpt.config.json
@@ -95,7 +95,23 @@
          "ObjectType": 0
       },
       {
+         "Name": "[INV].[CartDetail]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[INV].[CartMaster]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[INV].[Categories]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[INV].[CollectionDetail]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[INV].[CollectionMaster]",
          "ObjectType": 0
       },
       {
@@ -104,6 +120,14 @@
       },
       {
          "Name": "[INV].[Departments]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[INV].[InvoiceDetail]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[INV].[InvoiceMaster]",
          "ObjectType": 0
       },
       {
@@ -164,6 +188,10 @@
       },
       {
          "Name": "[SYSTEM].[Notifications]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[SYSTEM].[NotificationTypes]",
          "ObjectType": 0
       },
       {
