Invoice More work

--- a/MainModels/efpt.config.json
+++ b/MainModels/efpt.config.json
@@ -15,6 +15,18 @@
    "T4TemplatePath": null,
    "Tables": [
       {
+         "Name": "[AST].[Buildings]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[AST].[Floors]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[AST].[ServingTables]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[Business].[Branches]",
          "ObjectType": 0
       },
@@ -180,6 +192,10 @@
       },
       {
          "Name": "[MEDIA].[FileManager]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[Setup].[PaymentMethods]",
          "ObjectType": 0
       },
       {
