Changes in Model

--- a/MainModels/efpt.config.json
+++ b/MainModels/efpt.config.json
@@ -167,6 +167,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[INV].[OrderStatus]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[INV].[ProductBranches]",
          "ObjectType": 0
       },
