--- a/MainModels/efpt.config.json
+++ b/MainModels/efpt.config.json
@@ -223,6 +223,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[INV].[ProductReviews]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[INV].[Products]",
          "ObjectType": 0
       },
